# loctran

./: .coverage  .cursorrules  .dockerignore  .gitignore  AUDIT_FIXES.md  CHANGELOG.md  CLA.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  MODEL_HANDOFF.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  codecov.yml  extracted.json  main.py  pyproject.toml  test_trans.py
.agent/: SKILL.md  rules.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml  release.yml
app/: __init__.py  compress.py  server.py
app/static/: index.html  manifest.json  style.css
docs/: model-handout.md
loctran/: __init__.py  cli.py  config.py  diagnostics.py  exceptions.py  extract.py  model_policy.py  render.py  setup_deps.py  translate.py
loctran/extraction/: __init__.py  ai_ocr.py  digital.py  ocr.py  pipeline.py  rasterize.py  segments.py
loctran/server/: __init__.py  compress.py  server.py  store.py
loctran/server/static/: index.html  style.css
scripts/: bump_version.py  capture_screenshots.py  make_demo_gif.py
tests/: test_cli.py  test_compress.py  test_extract.py  test_extract_coverage.py  test_extraction_submodules.py  test_font_size.py  test_integration_ocr.py  test_misc.py  test_model_policy.py  test_server.py  test_server_ai_engine.py  test_setup_deps.py  test_translate.py  test_translate_robustness.py
