[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loctran"
version = "0.1.1b1"
description = "Local-first document translation and conversion toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anzal KS" }]
license = { text = "Apache-2.0" }
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business",
  "Environment :: Web Environment",
]
keywords = [
  "pdf", "translation", "ocr", "ollama", "local-ai",
  "privacy", "offline", "tesseract", "document",
]
dependencies = [
  "click",
  "tqdm",
  "langdetect",
  "markdown",
  "Pillow",
  "psutil",
  "pydantic",
  "requests",
  "fpdf",
  "rich",
]

[project.urls]
Repository = "https://github.com/anzalks/loctran"
"Bug Tracker" = "https://github.com/anzalks/loctran/issues"

[project.optional-dependencies]
ocr = [
  "pytesseract",
  "pdfplumber",
  "pypdfium2",
]
server = [
  "fastapi",
  "uvicorn",
  "python-multipart",
]
test = [
  "pytest",
  "pytest-cov",
  "httpx",
  "mypy",
]

[project.scripts]
loctran = "loctran.cli:cli_entry"
loctran-doctor = "loctran.diagnostics:run_doctor"

[tool.setuptools]
packages = ["loctran", "loctran.server"]
py-modules = ["launcher"]

[tool.setuptools.package-data]
"loctran.server" = ["static/*"]
