[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loctran"
version = "0.1.2b1"
description = "Local-first document translation and conversion toolkit"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Anzal K. Shahul" }]
license = "Apache-2.0"
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Operating System :: OS Independent",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Science/Research",
  "Topic :: Text Processing :: Linguistic",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Office/Business",
  "Environment :: Web Environment",
]
keywords = [
  "pdf", "translation", "ocr", "ollama", "local-ai",
  "privacy", "offline", "tesseract", "document",
]
dependencies = [
  "click>=8.0.0",
  "tqdm>=4.60.0",
  "langdetect>=1.0.9",
  "ollama>=0.3.0",
  "Pillow>=10.0.0",
  "pytesseract>=0.3.10",
  "pdfplumber>=0.10.0",
  "pypdfium2>=4.0.0",
  "fastapi>=0.100.0",
  "uvicorn>=0.23.0",
  "python-multipart>=0.0.6",
  "psutil>=5.9.0",
  "pydantic>=2.0.0",
  "rich>=13.0.0",
  "opencv-python-headless>=4.0.0",
]

[project.urls]
Repository = "https://github.com/anzalks/loctran"
"Bug Tracker" = "https://github.com/anzalks/loctran/issues"

[project.optional-dependencies]
test = [
  "pytest>=7.0.0",
  "pytest-cov>=4.0.0",
  "httpx>=0.24.0",
  "mypy>=1.0.0",
]
dev = [
  "playwright",
  "Pillow",
]

[project.scripts]
loctran = "loctran.cli:cli_entry"
loctran-doctor = "loctran.diagnostics:run_doctor"

[tool.setuptools.packages.find]
where = ["."]
include = ["loctran*"]

[tool.setuptools.package-data]
"loctran.server" = ["static/*", "static/**/*"]

[tool.setuptools.exclude-package-data]
"*" = [
  ".agent/*",
  ".cursorrules",
  "SKILL.md",
  "rules.md",
  ".vscode/*",
  ".idea/*",
]
